--- a/style.css
+++ b/style.css
@@ -1,10 +1,47 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  height: 100vh;
+}
+
+.sidebar {
+  background-color: aqua;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 20%;
+  box-shadow: 6px 4px 6px rgba(0, 0, 0, 0.5);
+}
+
+.song__cards {
+  background-color: black;
+  margin-bottom: 5px;
+}
+
+.card {
+  background-color: green;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  padding: 5px;
+  border-radius: 10px;
+  text-align: center;
+  width: 20vw;
+}
+
 .slider {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
   height: 5px;
-  background-color: rgb(56, 156, 202);
+  background-color: rgb(255, 255, 255);
   transition: opacity 0.3s;
+  width: 100%;
 }
 
 .slider::-webkit-slider-thumb {
@@ -16,4 +53,41 @@
   border: 2px solid salmon;
   cursor: pointer;
   border-radius: 100%;
+}
+
+.card__img {
+  background-color: black;
+  width: 100%;
+  height: 180px;
+}
+.card__img img {
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+}
+
+.song__buttons {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  margin: 20px 0;
+  background-color: black;
+  max-height: 100%;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#prev, #play, #next {
+  border-radius: 100%;
+  padding: 10px 15px;
+  border: none;
+  margin: 10px 0;
+  cursor: pointer;
+  margin: 0;
+  transition: 0.3s ease-in-out;
+  outline: none;
+}
+#prev:hover, #play:hover, #next:hover {
+  background-color: black;
+  color: white;
 }/*# sourceMappingURL=style.css.map */
